--- a/container/Makefile
+++ b/container/Makefile
@@ -22,7 +22,7 @@ transcapstone-sim: $(CONTAINER_IMG)
 	$(CONTAINER_IMG) --isa=$(ISA) -p$(SPIKE_NCORES) -m${SPIKE_NORMAL_MEM} -M${SPIKE_SECURE_MEM} --kernel $(LINUX_IMAGE) $(FW_IMAGE)
 
 capstone-sim: $(CONTAINER_IMG)
-	$(CONTAINER_IMG) --isa=$(ISA) -p1 -p$(SPIKE_NCORES) -m${SPIKE_NORMAL_MEM} -M${SPIKE_SECURE_MEM} -P ${PK} ${TARGET_PROGRAM}
+	$(CONTAINER_IMG) --isa=$(ISA) -p1 -p$(SPIKE_NCORES) -m${SPIKE_NORMAL_MEM} -M${SPIKE_SECURE_MEM} ${PK} ${TARGET_PROGRAM}
 
 clean:
 	rm -f $(CONTAINER_IMG)
