update path information

--- a/container/Makefile
+++ b/container/Makefile
@@ -7,8 +7,8 @@ SPIKE_NORMAL_MEM ?= 0x80000000:0x80000000
 SPIKE_SECURE_MEM ?= 0x100000000:0x80000000
 
 ifndef EXTERNAL_CONTAINER_IMG
-CONTAINER_DEF=dev.def
-CONTAINER_IMG=dev.sif
+CONTAINER_DEF=capstone_sim.def
+CONTAINER_IMG=capstone_sim.sif
 
 $(CONTAINER_IMG): $(CONTAINER_DEF)
 	apptainer build -F $@ $<
